--- a/platform-demo/app-demo2-impl/pom.xml
+++ b/platform-demo/app-demo2-impl/pom.xml
@@ -52,6 +52,10 @@
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.wenjay</groupId>
             <artifactId>app-demo1-api</artifactId>
             <version>1.0.0-SNAPSHOT</version>
