feign及熔断处理

--- a/platform-demo/app-demo1-impl/pom.xml
+++ b/platform-demo/app-demo1-impl/pom.xml
@@ -51,6 +51,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
+        <!--hystrix 熔断处理 依赖-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.2.9.RELEASE</version>
+        </dependency>
         <dependency>
             <groupId>com.wenjay</groupId>
             <artifactId>app-demo2-api</artifactId>
