--- a/platform-demo/app-demo2-impl/pom.xml
+++ b/platform-demo/app-demo2-impl/pom.xml
@@ -51,9 +51,11 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-loadbalancer</artifactId>
         </dependency>
+        <!--hystrix 熔断处理 依赖-->
         <dependency>
-            <groupId>io.github.openfeign</groupId>
-            <artifactId>feign-okhttp</artifactId>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+            <version>2.2.9.RELEASE</version>
         </dependency>
         <dependency>
             <groupId>com.wenjay</groupId>
