--- a/platform-demo/app-demo1-api/pom.xml
+++ b/platform-demo/app-demo1-api/pom.xml
@@ -23,5 +23,9 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-openfeign-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
+        </dependency>
     </dependencies>
 </project>
