--- a/platform-demo/app-demo2-api/pom.xml
+++ b/platform-demo/app-demo2-api/pom.xml
@@ -13,7 +13,6 @@
         <groupId>com.wenjay</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-
     <dependencies>
         <dependency>
             <groupId>com.wenjay</groupId>
@@ -22,6 +21,10 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-openfeign-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-okhttp</artifactId>
         </dependency>
     </dependencies>
 </project>
